--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Mar 11 09:42:06 GMT 2024
-sdk.dir=C\:\\Users\\Jason\\AppData\\Local\\Android\\Sdk
+#Wed Nov 12 09:03:08 GMT 2025
+sdk.dir=/home/jason/Android/Sdk
